--- a/EyadtyApp/composer.json
+++ b/EyadtyApp/composer.json
@@ -62,6 +62,10 @@
     "extra": {
         "laravel": {
             "dont-discover": []
+        }, "merge-plugin": {
+            "include": [
+                "Modules/*/composer.json"
+            ]
         }
     },
     "config": {
@@ -76,4 +80,5 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+
 }
